<resources>
    <string name="app_name">JokenpoTeste</string>


    <string name="opcoes">Escolha uma opção</string>
    <string name="ultimaJogada">Última jogada</string>
    <string name="jogadaPlayer">Você</string>
    <string name="resultado">Resultado</string>
    <string name="jogadaPC">Android</string>
    <string name="venceu">Você Venceu</string>
    <string name="perdeu">Você Perdeu</string>
    <string name="empatou">Você Empatou</string>
</resources>


